# wooting-macros

./: .eslintrc.json  .gitignore  .prettierrc.json  .yarnrc.yml  CONTRIBUTING.md  Cargo.toml  README.md  config.json  data_json.json  index.html  package-lock.json  package.json  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy.yml
.run/: Run (Production).run.xml  Run (dev only).run.xml  Run.run.xml  tauri BUILD.run.xml  tauri RUN.run.xml
protos/: wooting_service.proto
src/: App.css  App.tsx  HIDmap.d.ts  HIDmap.ts  enums.ts  main.rs  main.tsx  theme.ts  types.d.ts  utils.ts  utils.tsx  wooting_macros_library.rs
src-tauri/: Cargo.toml  application_log_archive_0_.gzip  data_json.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: hid_table.rs  main.rs  plugin_delay.rs  plugin_key_press.rs  wooting_macros_library.rs
src-tauri/src/plugin/: delay.rs  key_press.rs  mod.rs  mouse_movement.rs  phillips_hue.rs  system_event.rs
src/components/: AddMacroView.tsx  CollectionButton.tsx  EditMacroView.tsx  EmojiPopover.tsx  FadeInWrapper.tsx  MacroCard.tsx  MacroView.tsx  MacroviewEditElementArea.tsx  MacroviewHeader.tsx  MacroviewSequenceElementArea.tsx  MacroviewSequencingArea.tsx  MacroviewTriggerArea.tsx  MacroviewTypeArea.tsx  Overview.tsx  SequenceElementButton.tsx  SequenceElementDraggableDisplay.tsx  SettingsModal.tsx  Sortable.tsx  icons.tsx
src/components/leftPanel/: SearchBar.tsx
src/components/macrosettings/: DefaultMacroSettings.tsx  MacroSettingsLeftPanel.tsx  NotificationMacroSettingsPanel.tsx
src/components/macroview/: ClearSequenceModal.tsx  EditArea.tsx  EmojiModal.tsx  Header.tsx  LeftAndCenterArea.tsx  MacroTypeArea.tsx  MacroviewEditElementArea.tsx  MacroviewSequenceElementArea.tsx  MacroviewSequencingArea.tsx  MacroviewTriggerArea.tsx  MacroviewTypeArea.tsx  SelectElementArea.tsx  SelectElementButton.tsx  SequenceElementButton.tsx  SequenceElementDraggableDisplay.tsx  SequencingArea.tsx  TriggerArea.tsx  TriggerModal.tsx  UnsavedChangesModal.tsx
src/components/macroview/centerPanel/: ClearSequenceModal.tsx  DroppableWrapper.tsx  SequencingArea.tsx  SortableList.tsx
src/components/macroview/centerPanel/sortableElement/: DragWrapper.tsx  SortableDragWrapper.tsx  SortableItem.tsx  SortableWrapper.tsx
src/components/macroview/centerPanel/sortableList/: DragWrapper.tsx  SortableItem.tsx
src/components/macroview/editForms/: ClipboardForm.tsx  DelayForm.tsx  EmptyForm.tsx  KeyPressForm.tsx  MousePressForm.tsx  OpenAppForm.tsx  OpenEventForm.tsx  ScreenBrightnessForm.tsx  SystemEventActionForm.tsx
src/components/macroview/elementGrids/: AllElementsGrid.tsx  KeyboardKeysGrid.tsx  MouseButtonsGrid.tsx  PluginsGrid.tsx  SystemEventsGrid.tsx
src/components/macroview/leftPanel/: DraggableWrapper.tsx  OverlayDraggableWrapper.tsx  SelectElementArea.tsx  SelectElementButton.tsx
src/components/macroview/leftPanel/AccordionComponents/: KeyboardKeysSection.tsx  MouseButtonsSection.tsx  (+3 more)
src/components/macroview/rightPanel/: EditArea.tsx
src/components/macroview/sortableList/: DragWrapper.tsx  SortableItem.tsx  SortableWrapper.tsx
src/components/macroview/topArea/: Header.tsx  MacroStateButtons.tsx  MacroTestingArea.tsx  MacroTypeArea.tsx  TriggerArea.tsx  TriggerModal.tsx
src/components/overview/: CollectionButton.tsx  CollectionModal.tsx  CollectionPanel.tsx  DeleteCollectionModal.tsx  LeftPanel.tsx  MacroCard.tsx  MacroList.tsx  ToggleGrabbingButton.tsx
src/components/settings/: AccessibilitySettingsPanel.tsx  AppearanceSettingsPanel.tsx  ApplicationSettingsPanel.tsx  IntegrationSettingsPanel.tsx  LanguageSettingsPanel.tsx  NumberInputSetting.tsx  PatchNotesPanel.tsx  SettingsButton.tsx  SettingsLeftPanel.tsx  SettingsModal.tsx  ToggleSetting.tsx
src/components/settings/generalPages/: AccessibilitySettings.tsx  AppearanceSettings.tsx  IntegrationSettings.tsx  LanguageSettings.tsx  WindowSettings.tsx
src/components/settings/otherPages/: Feedback.tsx  Support.tsx  Updates.tsx
src/constants/: HIDmap.ts  MacroSettingsMap.ts  MouseMap.ts  PluginsEventMap.ts  SettingsMap.ts  SystemEventMap.ts  applicationSettings.ts  enums.ts  externalLinks.ts  index.ts  utils.ts
src/contexts/: applicationContext.tsx  macroContext.tsx  selectors.ts  sequenceContext.tsx  settingsContext.tsx
src/hooks/: useBorderColour.ts  useMainBgColour.ts  useRecording.ts  useRecordingSequence.ts  useRecordingTrigger.ts  useScrollbarStyles.ts
src/maps/: HIDmap.ts  MouseMap.ts  PluginsEventMap.ts  SettingsMap.ts  SystemEventMap.ts
src/theme/: breakpoints.ts  colors.ts  config.ts  fonts.ts  index.ts  shadows.ts  styles.ts  textStyles.ts
src/theme/components/: accordion.ts  button.ts  divider.ts  input.ts  keyboardKey.ts  menu.ts  modal.ts  numberInput.ts  radio.ts  switch.ts  textArea.ts  tooltip.ts
src/theme/typography/: miniHeader.ts
src/views/: AddMacroView.tsx  EditMacroView.tsx  MacroSettingsModal.tsx  Macroview.tsx  Overview.tsx  SettingsModal.tsx
src/views/settings/: SettingsModal.tsx
src/views/settings/generalPages/: AccessibilitySettings.tsx  AppearanceSettings.tsx  ApplicationSettings.tsx  IntegrationSettings.tsx  LanguageSettings.tsx
src/views/settings/otherPages/: Support.tsx  Updates.tsx
wooting-macro-backend/: Cargo.toml  build.rs
wooting-macro-backend/benches/: file_creation_benchmark.rs
wooting-macro-backend/src/: config.rs  grpc.rs  hid_table.rs  lib.rs
wooting-macro-backend/src/grabbing/: executor.rs  matcher.rs  mod.rs
wooting-macro-backend/src/grabbing/linux/: input.rs  matcher.rs
wooting-macro-backend/src/grabbing/macos/: input.rs  matcher.rs  mod.rs
wooting-macro-backend/src/grabbing/windows/: input.rs  matcher.rs
wooting-macro-backend/src/macros/: collections.rs  macro_config.rs  macro_data.rs  macro_task.rs  macros.rs  mod.rs
wooting-macro-backend/src/macros/events/: actions.rs  mod.rs  triggers.rs
wooting-macro-backend/src/plugin/: delay.rs  discord.rs  key_press.rs  mod.rs  mouse.rs  mouse_movement.rs  obs.rs  phillips_hue.rs  system_event.rs  util.rs
(+13 files in other folders)
