[package]
name = "wooting-macros"
version = "0.9.0"
description = "Macro software made by Wooting."
authors = ["Jeroen N, Erik S, Simon W, David M, Khang N"]
license = "GPL-3.0-only"
repository = "https://github.com/WootingKb/wooting-macros"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
tauri = { version = "1.2", features = ["app-hide", "app-show", "cli", "clipboard-read-text", "clipboard-write-text", "dialog-open", "icon-png", "system-tray", "updater"] }
tokio = { version = "1.23", features = ["full"] }
tokio-serde = { version = "0.8", features = ["json"] }
wooting-macro-backend = { path = "../wooting-macro-backend" }
auto-launch = "0.4"
log = "0.4.17"
env_logger = "0.10.0"



[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[dependencies.tauri-plugin-single-instance]
git = "https://github.com/tauri-apps/tauri-plugin-single-instance"
#change this to stable release once it is available
branch = "dev"

[profile.release]
lto = true
