[package]
name = "wooting-macro-backend"
version = "1.0.0"
edition = "2021"
description = "Macro software backend made by Wooting."
authors = ["Jeroen N", "Erik S", "Simon W", "David M", "Khang N"]
license = "GPL-3.0-only"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive", "rc"] }
tauri = { version = "1.2", features = ["api-all", "icon-png", "system-tray"] }
rdev = { version = "0.5", features = ["evdev-rs", "serialize", "serde", "epoll", "inotify", "unstable_grab"] }
halfbrown = { version = "0.1", features = ["serde"] }
lazy_static = "1.4"
tokio = { version = "1.24", features = ["full"] }
tokio-serde = { version = "0.8", features = ["json"] }
opener = "0.5"
obws = { version = "0.10" }
rodio = "0.16"
copypasta = { version = "0.8", features = ["smithay-clipboard"] }

serde_repr = "0.1"
fastrand = "1.8"
dirs = "4.0"
itertools = "0.10"
anyhow = "1.0.66"
log = "0.4"
env_logger = "0.10"
rayon = "1.6.1"


[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
brightness = { version = "0.5"}
futures = "0.3"

[profile.release]
lto = true
